--- a/htmlf-index.html
+++ b/htmlf-index.html
@@ -2,19 +2,10 @@
 <html>
 
 <head>
-	<title> Mo's Html Final Page :( </title>
-	
-	<link rel="icon" type="image/jpg" href="logos/logo.png"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
-
-	
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="stylesheet.css">
+		<link href="https://fonts.googleapis.com/css2?family=Righteous&family=Special+Elite&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="sheet/stylesheet.css">
 </head> 
 
 <body> 
