--- a/htmlf-index.html
+++ b/htmlf-index.html
@@ -11,8 +11,29 @@
 <body> 
 	<!-- This is the first website-->
 	<!-- H5 is going to be used insted of p because the text will look bigger and better-->
-		<h1>Differences Between Phones and how to Chose the Right One?</h1>
+	
+	<ul clss="nav">
+		<div class="logo">
+			<a href="#">LOGO</a>
+		</div>
+
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contacts</a></li>
+
+	</ul>
+	
+	<h1>Differences Between Phones and how to Chose the Right One?</h1>
+
+		<button type="button" class="button">
+			<span class="button__text">HOME</span>
+			<span class="button__icon">
+				<ion-icon name="home-outline"></ion-icon>
+			</span>
+		</button>
 
 
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
