--- a/htmlf-index.html
+++ b/htmlf-index.html
@@ -2,34 +2,90 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Righteous&family=Special+Elite&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="sheet/stylesheet.css">
+		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="icon" type="image/x-icon" href="fav/favicon.ico">
 </head> 
 
 <body> 
-	<!-- This is the first website-->
-	<!-- H5 is going to be used insted of p because the text will look bigger and better-->
+	<header>
+		<img class="logo" src="logo/headlogo.png" height="70px" width="120px" alt="logo">
+		<nav>
+			<ul class="nav__links">
+				<li><a href="file:///C:/Users/hasse/Desktop/html%20final/header2/about.html" target="_blank">About</a></li>
+				<li><a href="file:///C:/Users/hasse/Desktop/html%20final/header2/contacts.html" target="_blank">contacts</a></li>
+			</ul>
 
-<div class="wrapper">
-	<div class="logo">
-		<img src="logos/logo.png" alt="logo" style="width: 150px;">
+
+
+		</nav>
+		
+	</header>
+
+	<div class="row">
+		<div class="col">
+			<br><br><br><br><br><br>
+			<h1>Different Phones</h1>
+
+			<h2><strong>We Try To Make 'Just The Best'</strong> </h2>
+		</div>
+		<div class="col">
+			<a href="file:///C:/Users/hasse/Desktop/html%20final/header2/iphone.html" target="_blank"><div class="card card1"></div></a>
+				<h5>APPLE</h5>
+				<p>The iPhone</p>
+		</div>
+		<div class="col">
+			<a href="file:///C:/Users/hasse/Desktop/html%20final/header2/samsung.html"target="_blank"><div class="card card2"></div></a>
+				<h5>SAMSUNG</h5>
+				<p>Galaxy</p>
+		</div>
+		<div class="col">
+			<a href="file:///C:/Users/hasse/Desktop/html%20final/header2/oneplus.html"target="_blank"><div class="card card3"></div></a>
+				<h5>ONEPLUS</h5>
+				<p>Oneplus 9pro</p>
+		</div>
+		<div class="col">
+			<a href="file:///C:/Users/hasse/Desktop/html%20final/header2/pixel.html"target="_blank"><div class="card card4"></div></a>
+				<h5>GOOGLE</h5>
+				<p>The Pixel 6</p>
+		</div>
 	</div>
-	<ul clss="nav-area">
+<br><br><br>
 
-		<li><a href="#">About</a></li>
-		<li><a href="#">Contacts</a></li>
+<h3>Description of Phones</h3>
+<table>
+	<tr>	
+		<th>Device</th>
+		<th>Maker</th>
+		<th>Price</th>
+	</tr>
+	<tr>
+		<td> Galaxy</td>
+		<td>Samsung</td>
+		<td>$1000</td>
+	</tr>
+	<tr>
+		<td> iPhone</td>
+		<td>Apple</td>
+		<td>$1200</td>
+	</tr>
+	<tr>
+		<td> oneplus 9pro</td>
+		<td>OnePlus</td>
+		<td>$800</td>
+
+	</tr>
+	<tr>
+		<td> Pixel</td>
+		<td>Google</td>
+		<td>$900</td>
+	</tr>
+</table>
+
 	
-	</ul>
-</div>
-
-<div class="welcome-text">
-	<h1>Different Types of Phones</h1>
-</div>
-	
-
-
 </body>
 
 </html>
